force-app/main/default/objects/Invoice__c/fields/Advance_Invoice_KSeF_Ref__c.field-meta.xml
<CustomField>
    <fullName>Advance_Invoice_KSeF_Ref__c</fullName>
    <description>NrKSeFFaZaliczkowej — KSeF reference of the advance invoice being settled (optional, for ROZ type)</description>
    <label>Advance Invoice KSeF Reference</label>
    <length>64</length>
    <type>Text</type>
</CustomField>