force-app/main/default/objects/Invoice__c/fields/Advance_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Advance_Invoice_Number__c</fullName>
    <description>NrFaZaliczkowej — number of the advance invoice being settled (for ROZ type)</description>
    <label>Advance Invoice Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>