force-app/main/default/objects/Invoice__c/fields/Amount_Gross__c.field-meta.xml
<CustomField>
    <fullName>Amount_Gross__c</fullName>
    <label>Amount Gross</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>