force-app/main/default/objects/Invoice__c/fields/Bank_Account_Description__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Description__c</fullName>
    <label>Bank Account Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>