force-app/main/default/objects/Invoice__c/fields/Bank_SWIFT__c.field-meta.xml
<CustomField>
    <fullName>Bank_SWIFT__c</fullName>
    <label>Bank SWIFT</label>
    <length>11</length>
    <type>Text</type>
</CustomField>