force-app/main/default/objects/Invoice__c/fields/Buyer_Address__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Address__c</fullName>
    <label>Buyer Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>