force-app/main/default/objects/Invoice__c/fields/Buyer_Address_L2__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Address_L2__c</fullName>
    <label>Buyer Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>