force-app/main/default/objects/Invoice__c/fields/Buyer_Country__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Country__c</fullName>
    <defaultValue>&quot;PL&quot;</defaultValue>
    <label>Buyer Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>