force-app/main/default/objects/Invoice__c/fields/Buyer_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>Buyer_ID_Type__c</fullName>
    <label>Buyer ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NIP</fullName>
                <default>true</default>
                <label>NIP</label>
            </value>
            <value>
                <fullName>NrVatUE</fullName>
                <label>EU VAT (NrVatUE)</label>
            </value>
            <value>
                <fullName>NrID</fullName>
                <label>Other ID (NrID)</label>
            </value>
            <value>
                <fullName>BrakID</fullName>
                <label>No ID (BrakID)</label>
            </value>
            <value>
                <fullName>PESEL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>