force-app/main/default/objects/Invoice__c/fields/Buyer_NIP__c.field-meta.xml
<CustomField>
    <fullName>Buyer_NIP__c</fullName>
    <label>Buyer NIP</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>