force-app/main/default/objects/Invoice__c/fields/Corrected_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Corrected_Invoice_Date__c</fullName>
    <description>DataWystFaKorygowanej — issue date of the original invoice being corrected</description>
    <label>Corrected Invoice Date</label>
    <type>Date</type>
</CustomField>