force-app/main/default/objects/Invoice__c/fields/Corrected_Invoice_KSeF_Ref__c.field-meta.xml
<CustomField>
    <fullName>Corrected_Invoice_KSeF_Ref__c</fullName>
    <description>NrKSeF — KSeF reference number of the original invoice being corrected (optional)</description>
    <label>Corrected Invoice KSeF Reference</label>
    <length>64</length>
    <type>Text</type>
</CustomField>