force-app/main/default/objects/Invoice__c/fields/Corrected_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Corrected_Invoice_Number__c</fullName>
    <description>NrFaKorygowanej — number of the original invoice being corrected</description>
    <label>Corrected Invoice Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>