force-app/main/default/objects/Invoice__c/fields/Correction_Reason__c.field-meta.xml
<CustomField>
    <fullName>Correction_Reason__c</fullName>
    <description>PrzyczynaKorekty — required for KOR, KOR_ZAL, KOR_ROZ invoice types</description>
    <label>Correction Reason</label>
    <type>TextArea</type>
</CustomField>