force-app/main/default/objects/Invoice__c/fields/Correction_Type__c.field-meta.xml
<CustomField>
    <fullName>Correction_Type__c</fullName>
    <description>TypKorekty — 1=Item-level, 2=Summary-level, 3=Non-financial. Required for KOR types.</description>
    <label>Correction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - Item-level (Korekta pozycji)</label>
            </value>
            <value>
                <fullName>2</fullName>
                <default>true</default>
                <label>2 - Summary (Dane podsumowania)</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - Non-financial (Bez zmiany kwot)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>