force-app/main/default/objects/Invoice__c/fields/Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type__c</fullName>
    <label>Invoice Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VAT</fullName>
                <default>true</default>
                <label>VAT</label>
            </value>
            <value>
                <fullName>KOR</fullName>
                <label>Correction (KOR)</label>
            </value>
            <value>
                <fullName>ZAL</fullName>
                <label>Advance (ZAL)</label>
            </value>
            <value>
                <fullName>ROZ</fullName>
                <label>Settlement (ROZ)</label>
            </value>
            <value>
                <fullName>UPR</fullName>
                <label>Simplified (UPR)</label>
            </value>
            <value>
                <fullName>KOR_ZAL</fullName>
                <label>Correction Advance (KOR_ZAL)</label>
            </value>
            <value>
                <fullName>KOR_ROZ</fullName>
                <label>Correction Settlement (KOR_ROZ)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>