force-app/main/default/objects/Invoice__c/fields/Is_Own_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Own_Bank_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Own Bank Account</label>
    <type>Checkbox</type>
</CustomField>