force-app/main/default/objects/Invoice__c/fields/Is_Self_Billing__c.field-meta.xml
<CustomField>
    <fullName>Is_Self_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self-Billing</label>
    <type>Checkbox</type>
</CustomField>