force-app/main/default/objects/Invoice__c/fields/Is_Split_Payment__c.field-meta.xml
<CustomField>
    <fullName>Is_Split_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Split Payment</label>
    <type>Checkbox</type>
</CustomField>