force-app/main/default/objects/Invoice__c/fields/KSeF_Reference__c.field-meta.xml
<CustomField>
    <fullName>KSeF_Reference__c</fullName>
    <externalId>true</externalId>
    <label>KSeF Reference Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>