force-app/main/default/objects/Invoice__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>6</fullName><default>true</default><label>Transfer</label></value>
            <value><fullName>1</fullName><default>false</default><label>Cash</label></value>
            <value><fullName>2</fullName><default>false</default><label>Card</label></value>
            <value><fullName>3</fullName><default>false</default><label>Voucher</label></value>
            <value><fullName>4</fullName><default>false</default><label>Check</label></value>
            <value><fullName>5</fullName><default>false</default><label>Credit</label></value>
            <value><fullName>7</fullName><default>false</default><label>Mobile</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>