force-app/main/default/objects/Invoice__c/fields/Seller_Address__c.field-meta.xml
<CustomField>
    <fullName>Seller_Address__c</fullName>
    <label>Seller Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>