force-app/main/default/objects/Invoice__c/fields/Seller_NIP__c.field-meta.xml
<CustomField>
    <fullName>Seller_NIP__c</fullName>
    <description>Seller tax identification number (NIP). Used to match invoice to the correct KSeF Seller configuration.</description>
    <label>Seller NIP</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>