force-app/main/default/objects/Invoice__c/listViews/All_Invoices.listView-meta.xml
<ListView>
    <fullName>All_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Invoice_Type__c</columns>
    <columns>Issue_Date__c</columns>
    <columns>Buyer_NIP__c</columns>
    <columns>Buyer_Name__c</columns>
    <columns>Currency_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Invoices (Wszystkie faktury)</label>
</ListView>